# luigi

./: .coveragerc  .gitignore  CMakeLists.txt  CONTRIBUTING.rst  MANIFEST.in  README.rst  RELEASE-PROCESS.rst  catalog-info.yaml  codecov.yml  config.toml  guide.txt  main.cpp  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
doc/: Makefile  central_scheduler.rst  conf.py  configuration.rst  design_and_limitations.rst  example_top_artists.rst  execution_model.rst  index.rst  logging.rst  luigi_patterns.rst  parameters.rst  running_luigi.rst  running_trun.rst  steps.rst  (+2 more)
examples/all/untitled10/src/core/: CMakeLists.txt  parm.cc  parm.h  step.cc  step.h  step_factory.cc  step_factory.h  step_register.cc  step_register.h  target.cc  target.h
examples/all/untitled10/test/: CMakeLists.txt
examples/all/untitled10/test/utils/: CMakeLists.txt  config_test.cc  logger_test.cc
src/: CMakeLists.txt  DataLayer.cpp  TradingAlgo.cpp  TradingAlgo.h  application.cpp  application.h  benchmark.cpp  benchmark.h  comisstion.cc  command_line_processor.cpp  command_line_processor.h  config.cpp  config.h  config.py  config.toml  config_parser.cpp  config_parser.h  config_test.cpp  config_with_array.toml  config_with_array_of_integers.toml  config_with_boolean.toml  config_with_boolean_array.toml  config_with_datetime.toml  config_with_datetime_array.toml  config_with_deeply_nested_table.toml  config_with_float.toml  config_with_float_array.toml  config_with_integer.toml  config_with_key.toml  config_with_nested_table.toml  config_with_nonexistent_file.toml  config_with_null.toml  config_with_root.toml  config_with_string.toml  config_with_table.toml  config_with_table_array.toml  data_layer.py  dblogger.cpp  errors.h  example.cpp  (+25 more)
src/finance/: asset.cpp  asset_restrictions.cpp  asset_writter.cpp  blotter.cpp  cancel_policy.cpp  config.toml  constants.cpp  continue_futures.cpp  controls.cpp  country.cpp  events.cc  exchange_calendar.cc  exchange_info.cpp  exchange_info.h  execution.cpp  futures.h  ledger.cpp  metrics.cpp  notes.md  order.cc  position.cpp  protocol.cpp  roll_findeer.cpp  shared.cpp  slipage.cc  slipage.cpp  sym_engine.cpp  synthetic.cpp  tracker.cpp  tradeing.cpp  tradesimulation.cpp  transaction.cc
src/finance/article/: Estimating the price impact of trades in a high-frequency microstructure model with jumps☆
src/indicator/: entropy.cpp
src/predictor/: wls.cpp
src/sub/: CMakeLists.txt  command_line_processor.cpp  command_line_processor.h  main.cpp  step.h
src/top/: protocol.h
src/trun/: cmdline_parser.cpp  dateInterval.cpp  default_config.h  format.cpp  format.h  interface.cpp  parameter.cpp  scheduler.cpp  scheduler.h  step.cpp  stepRegister.cpp  target.cpp  target.h  toml_parser.cpp  worker.cpp  worker.h
test/: CMakeLists.txt  _mysqldb_test.py  _test_ftp.py  batch_notifier_test.py  choice_parameter_test.py  clone_test.py  cmdline_test.py  config_env_test.py  config_test.cpp  config_toml_test.py  customized_run_test.py  date_interval_test.py  date_parameter_test.py  db_step_history_test.py  decorator_test.py  dict_parameter_test.py  dynamic_import_test.py  event_callbacks_test.py  execution_summary_test.py  factorial_test.py  fib_test.py  hdfs_client_test.py  helpers.py  helpers_test.py  import_test.py  instance_test.py  instance_wrap_test.py  interface_test.py  list_parameter_test.py  local_target_test.py  lock_test.py  metrics_test.py  mock_test.py  most_common_test.py  notifications_test.py  numerical_parameter_test.py  optional_parameter_test.py  other_module.py  parameter_test.py  priority_test.py  (+40 more)
test/auto_namespace_test/: __init__.py  my_namespace_test.py
test/config/: trade_engin_test.cpp
test/contrib/: _webhdfs_test.py  azureblob_test.py  batch_test.py  beam_dataflow_test.py  bigquery_avro_test.py  bigquery_gcloud_test.py  bigquery_test.py  cascading_test.py  datadog_metric_test.py  dataproc_test.py  docker_runner_test.py  dropbox_test.py  ecs_test.py  esindex_test.py  external_daily_snapshot_test.py  external_program_test.py  gcs_test.py  hadoop_jar_test.py  hadoop_test.py  hdfs_test.py  hive_test.py  kubernetes_test.py  lsf_test.py  mongo_test.py  mysqldb_test.py  opener_test.py  pai_test.py  pig_test.py  postgres_test.py  postgres_with_server_test.py  presto_test.py  prometheus_metric_test.py  rdbms_test.py  redis_test.py  redshift_test.py  s3_test.py  salesforce_test.py  scalding_test.py  sge_test.py  spark_test.py  (+3 more)
test/contrib/hdfs/: webhdfs_client_test.py
test/create_packages_archive_root/package/subpackage/: submodule.py
test/testconfig/: luigi.toml
test/visualiser/: phantomjs_test.js  visualiser_test.py
(+227 files in other folders)
